Added Identity Authorization and authentication

--- a/Investis.ViewModel/Investis.ViewModel.csproj
+++ b/Investis.ViewModel/Investis.ViewModel.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessRegisterViewModel.cs" />
+    <Compile Include="LoginViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsersViewModel.cs" />
   </ItemGroup>
