--- a/Investis.Web/Web.config
+++ b/Investis.Web/Web.config
@@ -81,6 +81,8 @@
   </system.webServer>
   <connectionStrings>
       <add name="DefaultConnection" connectionString="data source=.\danielsqlserver; user id=sa; password=admin123; initial catalog=InvestisDB" providerName="System.Data.SqlClient" />
+    <add name="InvestisDBEntities" connectionString="metadata=res://*/GeneratedModels.GeneratedModel.csdl|res://*/GeneratedModels.GeneratedModel.ssdl|res://*/GeneratedModels.GeneratedModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\danielsqlserver;initial catalog=InvestisDB;user id=sa;password=admin123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
