--- a/Investis.DomainModel/App.Config
+++ b/Investis.DomainModel/App.Config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="InvestisDBEntities" connectionString="metadata=res://*/GeneratedModels.GeneratedModel.csdl|res://*/GeneratedModels.GeneratedModel.ssdl|res://*/GeneratedModels.GeneratedModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\danielsqlserver;initial catalog=InvestisDB;user id=sa;password=admin123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-      </connectionStrings>
+    <!--<add name="InvestisDBEntities" connectionString="metadata=res://*/GeneratedModels.GeneratedModel.csdl|res://*/GeneratedModels.GeneratedModel.ssdl|res://*/GeneratedModels.GeneratedModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\danielsqlserver;initial catalog=InvestisDB;user id=sa;password=admin123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+      <add name="InvestisDBEntities" connectionString="metadata=res://*/GeneratedModels.GeneratedModel.csdl|res://*/GeneratedModels.GeneratedModel.ssdl|res://*/GeneratedModels.GeneratedModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\danielsqlserver;initial catalog=InvestisDB;user id=sa;password=admin123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -25,4 +25,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
 </configuration>
